syntax = "proto3";
package user.service.v1;
option go_package = "project-user/pkg/service/user.service.v1";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message UserRequest {
  int64 userId = 1;
}

message UserResponse {
  int64 userId = 1;
  string userName = 2;
}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(UserRequest) returns (UserResponse);
}